--- a/sass/_menu_hover.scss
+++ b/sass/_menu_hover.scss
@@ -6,7 +6,7 @@ $menuHeight: 60px;
   font-family: $primaryFont;
   font-weight: 100;
   z-index: 9999;
-  position: absolute;
+  position: fixed;
   right: 220px;
   top: 50px;
 
