--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -59,7 +59,7 @@
   position: relative;
   text-align: left;
   @include media($tablet) {
-    padding-bottom: 0px;
+    padding-bottom: 20px;
   }
 }
 .content h1 {
@@ -77,14 +77,15 @@
   @include media($tablet) {
     font-size: 40px;
     line-height: 45px;
+    margin-bottom: 20px;
   }
 }
 
 .site-crumbs {
   text-align: left;
-  padding-top: 10px;
+  margin-top: 10px;
     @include media($tablet) {
-      padding-top: 20px;
+      margin-top: 40px;
   }
   .home & {
     display: none;
