--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -81,7 +81,13 @@
       @include media($tablet) {
         margin-bottom: 80px;
         padding: 20px;
-        width: 32%;
+        width: 48%;
+      }
+
+      &:hover {
+        // border: 1px solid $secondaryAlt;
+        transition: all 0.2s ease-in-out;
+        box-shadow: 0px 3px 3px rgba(#000, .3) ;
       }
 
       .para {
