--- a/sass/_front.scss
+++ b/sass/_front.scss
@@ -15,7 +15,6 @@
   margin-top: 0px;
   margin-bottom: 20px;
   a {
-    // color: #000;
     text-decoration: none;
   }
 }
@@ -26,46 +25,28 @@
 .welcome {
   position: relative;
   z-index: 1000;
-  // height: 300px;
   border-bottom: 5px solid #000;
-
+  height: 280px;
+  background: $darkColor;
   @include media($tablet) {
-    // height: 700px;
+    height: 502px;
   }
-
-  @include media($desktop) {
-    // background-size: cover;
-  }
-}
-
-.flickity-viewport {
-  height: 100% !important;
-  max-height: 600px;
-}
-
-.flickity-button {
-  display: none;
-}
-
-.main-carousel {
-  display: block;
-  width: 100%;
-  position: absolute;
-  top: 80px;
-  bottom: 0px;
-  left: 0;
-  right: 0;
-  max-height: 600px;
-}
-
-.slide-1, .slide-2, .slide-3, .slide-4 {
-  width: 100%;
-  height: 100%;
-  height: 300px;
-    @include media($tablet) {
-  height: 500px;
-    // height: 700px;
-  }
+  video {
+      position: absolute;
+      top: 0px;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 280px;
+      z-index: -1;
+      margin: 0;
+      padding: 0;
+      object-fit: cover;
+      opacity: 1;
+      @include media($desktop) {
+        height: 500px;
+      }
+    }
 }
 
 .slide-1 {
@@ -87,21 +68,8 @@
   background-size: cover;
 }
 
-/* flickity-fade */
-
-.flickity-enabled.is-fade .flickity-slider > * {
-  pointer-events: none;
-  z-index: 0;
-}
-
-.flickity-enabled.is-fade .flickity-slider > .is-selected {
-  pointer-events: auto;
-  z-index: 1;
-}
-
-
 .welcome-cta {
-  padding-top: 90px;
+  padding-top: 80px;
   padding-left: 10px;
   padding-right: 10px;
   @include media($tablet) {
