--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -239,9 +239,6 @@ a.show-form {
   }
 }
 
-
-
-
 .header-images-new {
   margin-top: 54px;
   height: 120px;
@@ -253,10 +250,11 @@ a.show-form {
   justify-content: center;
   background: #000;
   border-bottom: 1px solid #eee;
-
+  @include media($tablet) {
+    margin-top: 80px;
+  }
   .tmpl_type_single &, 
   .tmpl_type_page & {
-    // display: none;
     height: 0px;
   }
   h1 {
@@ -273,7 +271,6 @@ a.show-form {
     }
   }
 }
-
 
 
 .home .header-images,  
