--- a/style.css
+++ b/style.css
@@ -1814,6 +1814,12 @@ header .get-social a i {
   border-bottom: 1px solid #eee;
 }
 
+@media only screen and (min-width: 768px) {
+  .header-images-new {
+    margin-top: 80px;
+  }
+}
+
 .tmpl_type_single .header-images-new,
 .tmpl_type_page .header-images-new {
   height: 0px;
@@ -3425,36 +3431,33 @@ span.error {
   position: relative;
   z-index: 1000;
   border-bottom: 5px solid #000;
-}
-
-.flickity-viewport {
-  height: 100% !important;
-  max-height: 600px;
-}
-
-.flickity-button {
-  display: none;
-}
-
-.main-carousel {
-  display: block;
-  width: 100%;
-  position: absolute;
-  top: 80px;
-  bottom: 0px;
-  left: 0;
-  right: 0;
-  max-height: 600px;
-}
-
-.slide-1, .slide-2, .slide-3, .slide-4 {
-  width: 100%;
-  height: 100%;
-  height: 300px;
+  height: 280px;
+  background: #02034a;
 }
 
 @media only screen and (min-width: 768px) {
-  .slide-1, .slide-2, .slide-3, .slide-4 {
+  .welcome {
+    height: 502px;
+  }
+}
+
+.welcome video {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 280px;
+  z-index: -1;
+  margin: 0;
+  padding: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  opacity: 1;
+}
+
+@media only screen and (min-width: 1080px) {
+  .welcome video {
     height: 500px;
   }
 }
@@ -3479,19 +3482,8 @@ span.error {
   background-size: cover;
 }
 
-/* flickity-fade */
-.flickity-enabled.is-fade .flickity-slider > * {
-  pointer-events: none;
-  z-index: 0;
-}
-
-.flickity-enabled.is-fade .flickity-slider > .is-selected {
-  pointer-events: auto;
-  z-index: 1;
-}
-
 .welcome-cta {
-  padding-top: 90px;
+  padding-top: 80px;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -3721,8 +3713,18 @@ span.error {
   .tmpl_type_archive .post-snippet .excerpt {
     margin-bottom: 80px;
     padding: 20px;
-    width: 32%;
+    width: 48%;
   }
+}
+
+.home .post-snippet .excerpt:hover,
+.blog .post-snippet .excerpt:hover,
+.tmpl_type_category .post-snippet .excerpt:hover,
+.tmpl_type_archive .post-snippet .excerpt:hover {
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
 }
 
 .home .post-snippet .excerpt .para,
