--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -274,6 +274,7 @@ form {
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
   background-size: cover;
+  background-repeat: no-repeat;
   padding-top: 30px;
   padding-bottom: 30px;
   text-align: center;
@@ -283,7 +284,8 @@ form {
     padding-bottom: 100px;
   }
   @include media($desktop) {
-    background-attachment: scroll;
+    // background-attachment: scroll;
+    background-size: cover;
   }
    div {
     margin: 0 auto;
