--- a/sass/_front.scss
+++ b/sass/_front.scss
@@ -49,6 +49,13 @@
     }
 }
 
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgba(#000, .2);
+  // z-index: -1;
+}
 .slide-1 {
   background: #000 url("images/slide-1.jpg") center center no-repeat;
   background-size: cover;
@@ -69,6 +76,7 @@
 }
 
 .welcome-cta {
+  // z-index: 9999;
   padding-top: 80px;
   padding-left: 10px;
   padding-right: 10px;
