--- a/style.css
+++ b/style.css
@@ -3014,6 +3014,7 @@ form input {
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
   background-size: cover;
+  background-repeat: no-repeat;
   padding-top: 30px;
   padding-bottom: 30px;
   text-align: center;
@@ -3035,7 +3036,7 @@ form input {
 
 @media only screen and (min-width: 1080px) {
   .bg-hire {
-    background-attachment: scroll;
+    background-size: cover;
   }
 }
 
@@ -3460,6 +3461,13 @@ span.error {
   .welcome video {
     height: 500px;
   }
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .slide-1 {
