--- a/sass/_front.scss
+++ b/sass/_front.scss
@@ -51,9 +51,9 @@
 
 .overlay {
   width: 100%;
-  height: 100%;
+  height: calc(100% + 5px);
   position: absolute;
-  background: rgba(#000, .2);
+  background: rgba(#000, .3);
   // z-index: -1;
 }
 .slide-1 {
