--- a/sass/_menu_hover.scss
+++ b/sass/_menu_hover.scss
@@ -7,13 +7,13 @@ $menuHeight: 60px;
   font-weight: 100;
   z-index: 9999;
   position: fixed;
-  right: 220px;
+  right: 20px;
   top: 50px;
 
   .main-menu {
     display: flex;
     justify-content: space-around;
-    max-width: 1200px;
+    // max-width: 1200px;
     margin: 0 auto;
 
     > li {
