--- a/style.css
+++ b/style.css
@@ -1734,8 +1734,16 @@ header .get-social a i {
   color: #1da1f2;
 }
 
+.get-social a i.fa-twitter:hover {
+  color: #eb0077;
+}
+
 .get-social a i.fa-facebook {
   color: #3b5998;
+}
+
+.get-social a i.fa-facebook:hover {
+  color: #eb0077;
 }
 
 @media only screen and (min-width: 768px) {
@@ -2013,7 +2021,7 @@ header .get-social a i {
   font-weight: 100;
   z-index: 9999;
   position: fixed;
-  right: 220px;
+  right: 20px;
   top: 50px;
 }
 
@@ -2023,7 +2031,6 @@ header .get-social a i {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -3465,9 +3472,9 @@ span.error {
 
 .overlay {
   width: 100%;
-  height: 100%;
+  height: calc(100% + 5px);
   position: absolute;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.3);
 }
 
 .slide-1 {
@@ -3857,36 +3864,12 @@ span.error {
   font: normal normal normal 27px/17px "Font Awesome 5 Pro";
 }
 
-.from-blog .prev-blog-button:before {
-  -webkit-transition: all 0.1s ease-in;
-  transition: all 0.1s ease-in;
-  content: "\f137";
-  display: inline-block;
-  font: normal normal normal 27px/17px "Font Awesome 5 Pro";
-  position: relative;
-  margin-right: 10px;
-  top: 3px;
-  font-weight: 100;
-}
-
 .from-blog .prev-blog-button:hover {
   color: #eb0077;
 }
 
 .from-blog .prev-blog-button:hover:before {
   color: #eb0077;
-}
-
-.from-blog .next-blog-button:after {
-  -webkit-transition: all 0.1s ease-in;
-  transition: all 0.1s ease-in;
-  content: "\f138";
-  display: inline-block;
-  font: normal normal normal 27px/17px "Font Awesome 5 Pro";
-  position: relative;
-  margin-left: 10px;
-  top: 3px;
-  font-weight: 100;
 }
 
 .from-blog .next-blog-button:hover {
