social feed functio

--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -83,7 +83,7 @@
         padding: 20px;
         width: 48%;
       }
-
+    h3 {color:#000;}
       &:hover {
         // border: 1px solid $secondaryAlt;
         transition: all 0.2s ease-in-out;
