--- a/style.css
+++ b/style.css
@@ -1859,9 +1859,11 @@ header .get-social a i {
   -webkit-transition: opacity .2s ease;
   transition: opacity .2s ease;
   opacity: 0;
+  display: none;
 }
 
 .social-feed.active {
+  display: block;
   right: 0px;
   left: 0px;
   bottom: 0px;
