--- a/style.css
+++ b/style.css
@@ -1891,8 +1891,14 @@ header .get-social a i {
 
 .social-feed .the-feed {
   overflow: scroll;
-  max-width: 600px;
   margin: 0 auto;
+  height: 100%;
+}
+
+.social-feed .the-feed iframe {
+  width: 100%;
+  height: 100% !important;
+  border: 1px solid red;
 }
 
 /* ------------------------
