--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -327,7 +327,13 @@ a.show-form {
   }
   .the-feed {
     overflow: scroll;
-    max-width: 600px;
+    // max-width: 600px;
     margin: 0 auto;
+    height: 100%;
+    iframe {
+      width: 100%;
+      height: 100% !important;
+      border: 1px solid red;
+    }
   }
 }
