--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -333,7 +333,7 @@ a.show-form {
     iframe {
       width: 100%;
       height: 100% !important;
-      border: 1px solid red;
+      // border: 1px solid red;
     }
   }
 }
